charon/tests/ui/non-lifetime-gats.out
thread 'rustc' panicked at src/bin/charon-driver/translate/translate_predicates.rs:356:17:
assertion failed: nested.is_empty()
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
error: Thread panicked when extracting item `test_crate::PointerFamily`.
 --> tests/ui/non-lifetime-gats.rs:4:1
  |
4 | trait PointerFamily {
  | ^^^^^^^^^^^^^^^^^^^

error: Ignoring the following item due to an error: test_crate::PointerFamily
 --> tests/ui/non-lifetime-gats.rs:4:1
  |
4 | trait PointerFamily {
  | ^^^^^^^^^^^^^^^^^^^

error: Could not find the type variable "T" (index: 0)
  --> tests/ui/non-lifetime-gats.rs:13:5
   |
13 |     type Pointer<T> = Box<T>;
   |     ^^^^^^^^^^^^^^^

error: Ignoring the following item due to an error: test_crate::{impl#0}
  --> tests/ui/non-lifetime-gats.rs:12:1
   |
12 | impl PointerFamily for BoxFamily {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Could not find the type variable "U" (index: 1)
  --> tests/ui/non-lifetime-gats.rs:39:9
   |
39 |         type Type<U> = (T, U);
   |         ^^^^^^^^^^^^

error: Ignoring the following item due to an error: test_crate::moar_variables::{impl#1}
  --> tests/ui/non-lifetime-gats.rs:38:5
   |
38 |     impl<T> Trait<Option<T>> for Foo {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 6 previous errors

Error: Charon driver exited with code 101
